@@ -146,7 +146,12 @@ public:
   virtual void fillUnpacked(unpacked_node &nr, node_address addr, node_storage_flags) const;
 
   virtual unsigned hashNode(int level, node_address addr) const;
+  virtual bool isSingletonNode(node_address addr, unsigned &index,
+          node_handle &down) const;
+
+#ifdef ALLOW_DEPRECATED_SINGLETON
   virtual int getSingletonIndex(node_address addr, node_handle &down) const;
+#endif
   virtual node_handle getDownPtr(node_address addr, int index) const;
   virtual void getDownPtr(node_address addr, int ind, int& ev, node_handle& dn) const;
   virtual void getDownPtr(node_address addr, int ind, long& ev, node_handle& dn) const;
